Fix some deprecations and warnings